--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <uses-feature
-            android:name="android.hardware.sensor.gyroscope"
+            android:name="android.hardware.sensor.accelerometer"
             android:required="true" />
 
     <application
